--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@
             </div>
         </section>
     </mian>
+    <iframe src="http://online.anyflip.com/sionc/qgnl/mobile/index.html" width="100%" height="600" frameborder="0"></iframe>
     <footer>
         <div class="container">
             <div class="footer-boxes">
